<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/bar_layout"
        />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@id/toolbar"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Crt"
            android:textSize="20sp"
            android:textStyle="bold"/>



<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/username"
    android:layout_marginTop="10dp"
    android:padding="16dp"
    android:hint="@string/Usr"
/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Email"
            android:layout_marginTop="10dp"
            android:inputType="textEmailAddress"
            android:padding="16dp"
            android:hint="@string/Email"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/password"
            android:padding="16dp"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"
            android:hint="@string/Pass"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Rg"
            android:id="@+id/btn_rg"
            android:background="@color/colorPrimaryDark"
            android:textColor="#fff"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:id="@+id/term"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/term"
            />


    </LinearLayout>

</RelativeLayout>