<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:text="@string/cumb"
        android:textStyle="bold"
        android:textSize="25sp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registro"
        android:id="@+id/Register"
        android:textColor="#fff"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="100dp"
        />
    <Button
        android:layout_width="match_parent"
        android:textColor="#fff"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimaryDark"
        android:layout_height="wrap_content"
        android:id="@+id/Inc"
        android:text="@string/inc"
        />

</androidx.appcompat.widget.LinearLayoutCompat>